# sqlite-android

sqlite-android/: build.gradle
sqlite-android/src/main/java/io/requery/android/database/sqlite/: SQLiteConnection.java  SQLiteDatabase.java  SQLiteDatabaseConfiguration.java  SQLiteOpenHelper.java  SQLiteVfsIo.java  SQLiteVirtualFileSystem.java
sqlite-android/src/main/jni/sqlite/: Android.mk  CMakeLists.txt  android_database_SQLiteConnection.cpp  android_database_SQLiteVirtualFileSytem.cpp  android_database_SQLiteVirtualFileSytem.h  sqlite3.h
sqlite-android/src/main/jni/sqlite/cutil/: check.h  jniutil.c  jniutil.h  vfsio.c  vfsio.h
